@@ -1,6 +1,8 @@
 Revision history for Perl extension App::Info.
 
 0.25  
+      - Fixed parsing of version numbers for new releases of PostgreSQL,
+        which don't include the ".0" patch version in their version numbers.
 
 0.24  Tue Aug 26 00:58:55 2003
       - Fixed broken link in App::Info::Request documentation.
